# integral-parallel

./: README.md  integral-parallel.cabal
app/: Main.hs
src/Numerics/: Funcs.hs  Integrate.hs  Refine.hs  SimpsonPar.hs  SimpsonSeq.hs
test/: NumericsSpec.hs  PerformanceSpec.hs  RefinementSpec.hs  SimpsonSpec.hs
