cabal-version:       3.0
name:                integral-parallel
version:             0.1.0.0
build-type:          Simple

-- Library shared by exe and tests
library
  hs-source-dirs:      src
  exposed-modules:
      Numerics.SimpsonSeq
    , Numerics.SimpsonPar
    , Numerics.Refine
    , Numerics.Funcs
  build-depends:
      base       >=4.14 && <5
    , deepseq    >=1.4
    , parallel   >=3.2
    , containers
  default-language:    Haskell2010
  ghc-options:         -O2 -threaded

-- Executable
executable integral-parallel
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:
      base
    , deepseq
    , parallel
    , integral-parallel
  default-language:    Haskell2010
  ghc-options:         -O2 -threaded -rtsopts

test-suite integral-parallel-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs

  -- all test modules must be listed here:
  other-modules:
      SimpsonSpec
      RefinementSpec
      PerformanceSpec

  build-depends:
      base
    , deepseq
    , parallel
    , hspec >= 2.10
    , integral-parallel

  -- this is the key part fixing your error:
  build-tool-depends:
      hspec-discover:hspec-discover

  ghc-options: -threaded -O2
  default-language: Haskell2010
